test on keras model

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,12 +2,258 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import mxnet\n",
-    "from mxnet import ndarray as nd"
+    "from mxnet import ndarray as nd\n",
+    "from time import time\n",
+    "from gensim.models import KeyedVectors\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from keras.models import Model\n",
+    "from keras.layers import Input, Embedding, LSTM, Lambda\n",
+    "import keras.backend as K\n",
+    "from keras.optimizers import Adam\n",
+    "from keras.callbacks import ModelCheckpoint\n",
+    "import re, itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRAIN_CSV = './data/train.csv'\n",
+    "EMBEDDING = './data/GoogleNews-vectors-negative300.bin.gz'\n",
+    "MODEL_DIR = './model/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# control how many samples are read, due to memory limitation\n",
+    "nrows = 30000\n",
+    "train_df = pd.read_csv(TRAIN_CSV, nrows=nrows)\n",
+    "stops = set(stopwords.words('english'))\n",
+    "\n",
+    "def text_to_word_list(text):\n",
+    "    ''' Pre process and convert texts to a list of words '''\n",
+    "    text = str(text)\n",
+    "    text = text.lower()\n",
+    "\n",
+    "    # Clean the text\n",
+    "    text = re.sub(r\"[^A-Za-z0-9^,!.\\/'+-=]\", \" \", text)\n",
+    "    text = re.sub(r\"what's\", \"what is \", text)\n",
+    "    text = re.sub(r\"\\'s\", \" \", text)\n",
+    "    text = re.sub(r\"\\'ve\", \" have \", text)\n",
+    "    text = re.sub(r\"can't\", \"cannot \", text)\n",
+    "    text = re.sub(r\"n't\", \" not \", text)\n",
+    "    text = re.sub(r\"i'm\", \"i am \", text)\n",
+    "    text = re.sub(r\"\\'re\", \" are \", text)\n",
+    "    text = re.sub(r\"\\'d\", \" would \", text)\n",
+    "    text = re.sub(r\"\\'ll\", \" will \", text)\n",
+    "    text = re.sub(r\",\", \" \", text)\n",
+    "    text = re.sub(r\"\\.\", \" \", text)\n",
+    "    text = re.sub(r\"!\", \" ! \", text)\n",
+    "    text = re.sub(r\"\\/\", \" \", text)\n",
+    "    text = re.sub(r\"\\^\", \" ^ \", text)\n",
+    "    text = re.sub(r\"\\+\", \" + \", text)\n",
+    "    text = re.sub(r\"\\-\", \" - \", text)\n",
+    "    text = re.sub(r\"\\=\", \" = \", text)\n",
+    "    text = re.sub(r\"'\", \" \", text)\n",
+    "    text = re.sub(r\"(\\d+)(k)\", r\"\\g<1>000\", text)\n",
+    "    text = re.sub(r\":\", \" : \", text)\n",
+    "    text = re.sub(r\" e g \", \" eg \", text)\n",
+    "    text = re.sub(r\" b g \", \" bg \", text)\n",
+    "    text = re.sub(r\" u s \", \" american \", text)\n",
+    "    text = re.sub(r\"\\0s\", \"0\", text)\n",
+    "    text = re.sub(r\" 9 11 \", \"911\", text)\n",
+    "    text = re.sub(r\"e - mail\", \"email\", text)\n",
+    "    text = re.sub(r\"j k\", \"jk\", text)\n",
+    "    text = re.sub(r\"\\s{2,}\", \" \", text)\n",
+    "\n",
+    "    text = text.split()\n",
+    "\n",
+    "    return text\n",
+    "# prepare embedding\n",
+    "vocab = dict()\n",
+    "inverse_vocab = ['<unk>']\n",
+    "word2vec = KeyedVectors.load_word2vec_format(EMBEDDING, binary=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/steven/miniconda3/envs/dl/lib/python3.7/site-packages/ipykernel_launcher.py:12: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n",
+      "  if sys.path[0] == '':\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_columns = ['review_text', 'plot_summary']\n",
+    "for index, row in train_df.iterrows():\n",
+    "    for column in target_columns:\n",
+    "        embedding = []\n",
+    "        for word in text_to_word_list(row[column]):\n",
+    "            if word in stops and word not in word2vec.vocab:\n",
+    "                continue\n",
+    "            if word not in vocab:\n",
+    "                vocab[word] = len(inverse_vocab)\n",
+    "                inverse_vocab.append(word)\n",
+    "            embedding.append(vocab[word])\n",
+    "        train_df.set_value(index, column, embedding)\n",
+    "\n",
+    "embedding_dim = 300\n",
+    "embeddings = 1 * np.random.randn(len(vocab) + 1, embedding_dim)\n",
+    "embeddings[0] = 0\n",
+    "\n",
+    "for word, index in vocab.items():\n",
+    "    if word in word2vec.vocab:\n",
+    "        embeddings[index] = word2vec.word_vec(word)\n",
+    "del word2vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_seq_length  = max(train_df.review_text.map(lambda x: len(x)).max(),\n",
+    "                      train_df.plot_summary.map(lambda x: len(x)).max())\n",
+    "valid_size = round(len(train_df) * .2)\n",
+    "\n",
+    "X = train_df[target_columns]\n",
+    "Y = train_df['is_spoiler']\n",
+    "\n",
+    "X_train, X_valid, Y_train, Y_valid = train_test_split(X, Y, test_size=valid_size)\n",
+    "X_train = {'left': X_train.review_text, 'right': X_train.plot_summary}\n",
+    "X_valid = {'left': X_valid.review_text, 'right': X_valid.plot_summary}\n",
+    "Y_train = Y_train.values\n",
+    "Y_valid = Y_valid.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dataset, side in itertools.product([X_train, X_valid], ['left', 'right']):\n",
+    "    dataset[side] = pad_sequences(dataset[side], maxlen=max_seq_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/steven/miniconda3/envs/dl/lib/python3.7/site-packages/ipykernel_launcher.py:43: UserWarning: The `nb_epoch` argument in `fit` has been renamed `epochs`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 24000 samples, validate on 6000 samples\n",
+      "Epoch 1/10\n",
+      "24000/24000 [==============================] - 520s 22ms/step - loss: 0.2442 - acc: 0.7355 - val_loss: 0.2176 - val_acc: 0.7355\n",
+      "Epoch 2/10\n",
+      "23040/24000 [===========================>..] - ETA: 19s - loss: 0.2158 - acc: 0.7358"
+     ]
+    }
+   ],
+   "source": [
+    "n_hidden = 64\n",
+    "batch_size = 128\n",
+    "n_epoch = 10\n",
+    "\n",
+    "def exponent_neg_manhattan_distance(left, right):\n",
+    "    ''' Helper function for the similarity estimate of the LSTMs outputs'''\n",
+    "    return K.exp(-K.sum(K.abs(left-right), axis=1, keepdims=True))\n",
+    "\n",
+    "# The visible layer\n",
+    "left_input = Input(shape=(max_seq_length,), dtype='int32')\n",
+    "right_input = Input(shape=(max_seq_length,), dtype='int32')\n",
+    "\n",
+    "embedding_layer = Embedding(len(embeddings), embedding_dim, weights=[embeddings], \\\n",
+    "                            input_length=max_seq_length, trainable=False)\n",
+    "\n",
+    "# Embedded version of the inputs\n",
+    "encoded_left = embedding_layer(left_input)\n",
+    "encoded_right = embedding_layer(right_input)\n",
+    "\n",
+    "# Since this is a siamese network, both sides share the same LSTM\n",
+    "shared_lstm = LSTM(n_hidden)\n",
+    "\n",
+    "left_output = shared_lstm(encoded_left)\n",
+    "right_output = shared_lstm(encoded_right)\n",
+    "\n",
+    "# Calculates the distance as defined by the MaLSTM model\n",
+    "malstm_distance = Lambda(function=lambda x: exponent_neg_manhattan_distance(x[0], x[1]), \\\n",
+    "                         output_shape=lambda x: (x[0][0], 1))([left_output, right_output])\n",
+    "\n",
+    "# Pack it all up into a model\n",
+    "malstm = Model([left_input, right_input], [malstm_distance])\n",
+    "\n",
+    "# Adadelta optimizer, with gradient clipping by norm\n",
+    "optimizer = Adam(lr=0.0003, beta_1=0.9, beta_2=0.999, epsilon=None, decay=0.0, amsgrad=False)\n",
+    "\n",
+    "malstm.compile(loss='mean_squared_error', optimizer=optimizer, metrics=['accuracy'])\n",
+    "\n",
+    "# Start training\n",
+    "training_start_time = time()\n",
+    "\n",
+    "malstm_trained = malstm.fit([X_train['left'], X_train['right']], Y_train, batch_size=batch_size, \\\n",
+    "                            nb_epoch=n_epoch, validation_data=([X_valid['left'], X_valid['right']], \\\n",
+    "                                                               Y_valid))\n",
+    "\n",
+    "print(\"Training time finished.\\n{} epochs in {}\".format(n_epoch, \\\n",
+    "      datetime.timedelta(seconds=time()-training_start_time)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot accuracy\n",
+    "plt.plot(malstm_trained.history['acc'])\n",
+    "plt.plot(malstm_trained.history['val_acc'])\n",
+    "plt.title('Model Accuracy')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.legend(['Train', 'Validation'], loc='upper left')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot loss\n",
+    "plt.plot(malstm_trained.history['loss'])\n",
+    "plt.plot(malstm_trained.history['val_loss'])\n",
+    "plt.title('Model Loss')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.legend(['Train', 'Validation'], loc='upper right')\n",
+    "plt.show()"
    ]
   }
  ],
@@ -27,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
