--- a/model.ipynb
+++ b/model.ipynb
@@ -341,11 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "malstm.save('./model')"
+    "malstm.save('./model/malstm.h5')"
    ]
   },
   {
