--- a/mxnet_encoder.ipynb
+++ b/mxnet_encoder.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T03:14:50.359769Z",
@@ -33,7 +33,8 @@
     "import time\n",
     "from mxnet import nd, init, gluon, autograd\n",
     "from mxnet.gluon import nn, rnn, loss as gloss\n",
-    "import d2l"
+    "import d2l\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -215,6 +216,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Load data\n",
+    "This part is alike that in keras_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Model building"
    ]
   },
@@ -274,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "attributes": {
      "classes": [],
@@ -291,21 +300,19 @@
     "    loss = gloss.L1Loss\n",
     "    tic = time.time()\n",
     "    for epoch in range(1, num_epochs+1):\n",
-    "        l_sum, num_tokens_sum = 0.0, 0.0\n",
+    "        l_sum = 0.0\n",
     "        for batch in data_iter:\n",
     "            left, right, label = [x.as_in_context(ctx) for x in batch]\n",
     "            with autograd.record():\n",
     "                predict = model([left, right])\n",
     "                l = loss(predict, label)\n",
     "            l.backward()\n",
+    "            l_sum += l\n",
     "            d2l.grad_clipping_gluon(model, 5, ctx)\n",
-    "            num_tokens = Y_vlen.sum().asscalar()\n",
-    "            trainer.step(num_tokens)\n",
-    "            l_sum += l.sum().asscalar()\n",
-    "            num_tokens_sum += num_tokens\n",
+    "            trainer.step(1)\n",
     "        if epoch % 50 == 0:\n",
     "            print(\"epoch %d, loss %.3f, time %.1f sec\" % (\n",
-    "                epoch, l_sum/num_tokens_sum, time.time()-tic))\n",
+    "                epoch, l_sum, time.time()-tic))\n",
     "            tic = time.time()\n",
     "            "
    ]
@@ -323,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "attributes": {
      "classes": [],
@@ -333,31 +340,98 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 50, loss 0.120, time 10.2 sec\n",
-      "epoch 100, loss 0.066, time 10.4 sec\n",
-      "epoch 150, loss 0.041, time 10.3 sec\n",
-      "epoch 200, loss 0.031, time 10.3 sec\n",
-      "epoch 250, loss 0.028, time 10.0 sec\n",
-      "epoch 300, loss 0.025, time 9.5 sec\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>is_spoiler</th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>review_text</th>\n",
+       "      <th>plot_summary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt2404463</td>\n",
+       "      <td>Terrible How can you watch this the whole way ...</td>\n",
+       "      <td>Sarah Ashburn, an FBI agent, is extremely ambi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0878804</td>\n",
+       "      <td>A  feel good movie without the mush.. I went t...</td>\n",
+       "      <td>Based on the true story of Leigh Anne Tuohy an...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0116191</td>\n",
+       "      <td>Woefully bad Reading through all these positiv...</td>\n",
+       "      <td>Emma Woodhouse is a congenial young lady who d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>tt0773262</td>\n",
+       "      <td>This show is a serial killer..! All right, set...</td>\n",
+       "      <td>Dexter Morgan, Miami Metro Police Department b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt2226597</td>\n",
+       "      <td>Like Any \"Mountain\", It Just Feels Unmovable S...</td>\n",
+       "      <td>Stranded after a tragic plane crash, two stran...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   is_spoiler   movie_id                                        review_text  \\\n",
+       "0       False  tt2404463  Terrible How can you watch this the whole way ...   \n",
+       "1       False  tt0878804  A  feel good movie without the mush.. I went t...   \n",
+       "2       False  tt0116191  Woefully bad Reading through all these positiv...   \n",
+       "3        True  tt0773262  This show is a serial killer..! All right, set...   \n",
+       "4       False  tt2226597  Like Any \"Mountain\", It Just Feels Unmovable S...   \n",
+       "\n",
+       "                                        plot_summary  \n",
+       "0  Sarah Ashburn, an FBI agent, is extremely ambi...  \n",
+       "1  Based on the true story of Leigh Anne Tuohy an...  \n",
+       "2  Emma Woodhouse is a congenial young lady who d...  \n",
+       "3  Dexter Morgan, Miami Metro Police Department b...  \n",
+       "4  Stranded after a tragic plane crash, two stran...  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "embed_size, num_hiddens, num_layers, dropout = 32, 32, 2, 0.0\n",
     "batch_size, num_examples, max_len = 64, 1e3, 10\n",
     "lr, num_epochs, ctx = 0.005, 300, d2l.try_gpu()\n",
-    "\n",
-    "src_vocab, tgt_vocab, train_iter = d2l.load_data_nmt(\n",
-    "    batch_size, max_len, num_examples)\n",
-    "encoder = Seq2SeqEncoder(\n",
-    "    len(src_vocab), embed_size, num_hiddens, num_layers, dropout)\n",
-    "decoder = Seq2SeqDecoder(\n",
-    "    len(tgt_vocab), embed_size, num_hiddens, num_layers, dropout)\n",
-    "model = d2l.EncoderDecoder(encoder, decoder)\n",
-    "train_ch7(model, train_iter, lr, num_epochs, ctx)"
+    "# load data\n"
    ]
   },
   {
